2014-12-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): The libtiff JBIG coder only
	supports strip images, and fails when scanlines are requested.
	Force use of stripped read method when the file uses JBIG
	compression.  It is still not possible to write JBIG compressed
	TIFF files since there is not yet a strip writer.  Problem
	reported by Yuriy Kaminskiyon via the GM-bugs mailing list on
	2014-12-22.

2014-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (QuantumTransferMode): Fix quantum transfer
	handling for photometrics which might deliver one or three samples
	per pixel.  These were assuming that three samples were always
	provided.

2014-12-21  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c: Impose a 10-million limit on dimensions
	when reading a PNG file.

2014-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated with improvements since previous release.

2014-12-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/statistics.c (GetImageStatistics): Failed to compute
	statistics for the Black channel of CMYK image files.  Problem
	reported by Michael Below via Debian bug 773552:
	"graphicsmagick-imagemagick-compat: convert to cmyk leaves k
	channel empty".

2014-12-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/delegate.c (InvokeDelegate): Windows spawnvp() splits
	arguments into more arguments.  Add escaping to avoid the
	splitting.  Resolves SourceForge bug #276 "dcraw 9.19 included
	with gm 1.3.20 doesn't support paths with spaces."

	* magick/utility.c (TranslateTextEx): Fix regression added on
	2014-12-13 (yesterday) which caused output file name passed to
	delegate programs to be wrong.

	* magick/annotate.c (RenderFreetype): Fix regression added in
	1.3.19 which caused spurious drawing errors to be produced while
	rendering with text when all of the text is off the left-hand side
	of the image.
